# Karspexet

./: .codacy.yml  .codeclimate.yml  .coveragerc  .dockerignore  .editorconfig  .eslintignore  .eslintrc.json  .eslintrc.yml  .gitattributes  .gitignore  .postcssrc  .pre-commit-config.yaml  .prettierrc  .stylelintrc.yaml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  Pipfile  Procfile  README.md  create_superuser.sh  dev-requirements.txt  docker-compose.yml  docker_command.sh  env.json.sample  gunicorn.conf.py  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tailwind.config.js  tox.ini  tsconfig.json  vite.config.js  webpack.config.js
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: build.yml  tests.yml
Karspexet/: settings.py  wsgi.py
assets/css/: _animation.scss  _base.scss  _card.scss  _form-group.scss  _helpers.scss  _karspexet.scss  _layout.scss  _menu.scss  _number-input.scss  _payment.scss  _reset.scss  _select-seats.scss  fonts.css  icons.css  index.scss  karspexet.css  karspexet.scss  main.css  menu.css  number-input.scss  payment.css  payment.scss  select_seats.css  select_seats.scss  tables.css  tables.scss
assets/fonts/icomoon/: demo.html
assets/js/: app.js  backstage.ts  booking.ts  booking_overview.js  errors.ts  free-seating.ts  index.ts  number-input.ts  payment.js  payment.ts  seats.test.ts  seats.ts  select_seats.js  utils.ts
factories/: factories.py  fixtures.py
infra/: Makefile  README.md  deploy-green.sh  deploy-switch.sh  karspexet-docker.service  karspexet.conf
karspexet/: assets.py  settings.py  urls.py  utils.py  uwsgi.ini  wsgi.py
karspexet/backstage/: __init__.py
karspexet/economy/: forms.py  urls.py  views.py
karspexet/economy/tests/: test_views.py
karspexet/nginx.conf.d/: uploads.conf
karspexet/show/: admin.py  models.py
karspexet/show/migrations/: 0001_initial.py  0002_show_visible.py  0003_production_alt_name.py  0004_show_slug.py  0005_show_short_description.py  0006_allow_blank_show_short_description_20180323_0951.py  0007_show_free_seating.py
karspexet/show/tests/: test_models.py
karspexet/templates/: 404.html  500.html  _fonts.css  _footer.html  about.html  base.html  base_backstage.html  content_with_hero_image.html  home.html  menu.html  reservation_detail.html
karspexet/templates/economy/: base.html  discounts.html  overview.html  show_detail.html  vouchers.html
karspexet/templates/ticket/: _contact_details.html  _reservation_details.html  _select_seats_free_seating.html  _select_seats_seatmap.html  base.html  payment.html  payment_succeeded.html  select_seats.html  ticket.html
karspexet/templates/venue/: manage_seats.html  number-input.css  number-input.js
karspexet/ticket/: admin.py  forms.py  helpers.py  models.py  payment.py  tasks.py  tests.py  urls.py  utils.py  views.py
karspexet/venue/: admin.py  models.py  tests.py  urls.py  views.py
requirements/: base.txt  dev.txt
static/: fontawsome.js  fonts.css  karspexet.css  main.css  menu.css  menu.js  payment.css  payment.js  select_seats.css  select_seats.js
static/css/: fonts.css  icons.css  main.css  menu.css  payment.css
static/fonts/icomoon/: style.css  (+1 more)
static/js/: app.js  booking_overview.js  payment.js  select_seats.js
tickets/: models.py
tickets/migrations/: 0001_initial.py
tickets/tests/: conftest.py  test_show.py  test_ticket.py
(+49 files in other folders)
