[project]
name = "karspexet"
requires-python = "3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry]
name = "karspexet"
version = "1.0.0"
description = ""
authors = ["Kårspexet <webmaster@karspexet.se>"]

[tool.poetry.dependencies]
cssmin = "^0.2.0"
dj-database-url = "^0.5.0"
django = "^3"
django-cms = "^3.8.0"
django-filer = "^2.0.2"
django-inline-svg = "^0.1.1"
django_sendmail_backend = "^0.1.2"
djangocms-link = "^3.0.0"
djangocms-picture = "^3.0.0"
djangocms-text-ckeditor = "^4.0.0"
gunicorn = "^20.0.4"
pdfkit = "^1"
psycopg2-binary = "^2.8.6"
pypng = "^0.0.21"
pyqrcode = "^1.2.1"
python = "^3.9"
python-dateutil = "^2.8.1"
sentry-sdk = "1.5.8"
stripe = "^2.72.0"
whitenoise = "6.0.0"
xhtml2pdf = "^0.2.5"

[tool.poetry.dev-dependencies]
bpython = "*"
codacy-coverage = "*"
factory-boy = "*"
flake8 = "*"
isort = "*"
jedi = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
