[project]
name = "karspexet"
requires-python = "3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry]
name = "karspexet"
version = "1.0.0"
description = ""
authors = ["Kårspexet <webmaster@karspexet.se>"]

[tool.poetry.dependencies]
cssmin = "^0.2.0"
dj-database-url = "^0.5.0"
django = "4.0.10"
django-cms = "^3.11.4"
django-filer = "^3.1.1"
django-inline-svg = "^0.1.1"
django-object-actions = "4.0.0"
djangocms-link = "^3.1.1"
djangocms-picture = "^4.0.0"
djangocms-text-ckeditor = "^5.0.0"
gunicorn = "^20.0.4"
pdfkit = "^1"
psycopg2-binary = "^2.8.6"
pypng = "^0.20220715.0"
pyqrcode = "^1.2.1"
python = "^3.9"
python-dateutil = "^2.8.1"
sentry-sdk = "1.39.0"
stripe = "^2.55.1"
whitenoise = "^6"
xhtml2pdf = "^0.2.8"

[tool.poetry.dev-dependencies]
bpython = "*"
codacy-coverage = "*"
factory-boy = "*"
flake8 = "*"
isort = "*"
jedi = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
